[package]
name = "check_torrent"
version = "0.1.1"
authors = ["Matt Bilker <me@mbilker.us>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
failure = "0.1.3"
indicatif = "0.9.0"
rayon = "1.0.2"
serde = "1.0.72"
serde_bencode = "0.2.0"
serde_bytes = "0.10.0"
serde_derive = "1.0.72"
sha1 = "0.6.0"
walkdir = "2.2.6"
